--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,44 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <nav class="nav collapsible">
+      <div class="nav-center">
+        <a href="#"><img src="images/logo.svg" alt="" /></a>
+        <svg class="icon icon--large icon--primary collapsible__toggler">
+          <use xlink:href="images/sprite.svg#bars-solid"></use>
+        </svg>
+        <ul class="list nav__list collapsible__content">
+          <li class="nav__item"><a href="#">Home</a></li>
+          <li class="nav__item"><a href="#">About</a></li>
+          <li class="nav__item"><a href="#">Projects</a></li>
+          <li class="nav__item"><a href="#">Contact</a></li>
+        </ul>
+        <span class="icon-container collapsible__content">
+          <a href="https://www.facebook.com/rahidt1" target="_blank">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprite.svg#facebook-brands"></use>
+            </svg>
+          </a>
+          <a href="https://github.com/rahidt1" target="_blank">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprite.svg#github-brands"></use>
+            </svg>
+          </a>
+          <a href="https://www.linkedin.com/in/rahidt/" target="_blank">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprite.svg#linkedin-brands"></use>
+            </svg>
+          </a>
+        </span>
+      </div>
+    </nav>
     <script src="index.js"></script>
   </body>
 </html>
